# sheldon

./: .gitignore  CMakeLists.txt  Makefile  README.md  builtins.h  command.c  command.h  exec.c  exec.h  input.c  jobs.c  jobs.h  main.c  parse.c  parse.h  process.c  process.h  utils.c  utils.h
builtins/: bg.c  bg.h  cd.c  cd.h  echo.c  echo.h  env.c  env.h  fg.c  fg.h  ls.c  ls.h  pinfo.c  pinfo.h
sheldon/: CMakeLists.txt
sheldon/builtins/: cd.c  cd.h  echo.c  echo.h  env.c  env.h  ls.c  ls.h  pinfo.c  pinfo.h
sheldon/src/: builtins.h  command.c  command.h  exec.c  exec.h  input.c  input.h  jobs.c  jobs.h  main.c  parse.c  parse.h  prompt.c  prompt.h  utils.c  utils.h
src/: builtins.h  command.c  command.h  exec.c  exec.h  input.c  input.h  jobs.c  jobs.h  main.c  parse.c  parse.h  prompt.c  prompt.h  utils.c  utils.h
